attempted to fix some header, notification, and also comment collapse issues

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1153,6 +1153,7 @@ h1 {
     display: block;
     position: static;
     padding-left: 5px;
+    left: 0;
 }
 .botmenu a{
     color: #fff;
@@ -1214,9 +1215,9 @@ h1 {
     border: none;
 }
 .headercaption{
-    height: 31px;
+    height: 30px;
     text-align: center;
-    line-height: 31px;
+    line-height: 30px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
